--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <h2>Збереження здоров'я</h2>
         <p class="feature-kitten">Підтримка здоров'я - це шлях до довголіття і гарного самопочуття!</p>
         <p class="feature-cat">Здоров'я потребує уваги кожен день: збалансоване харчування, активний спосіб життя і турбота про психічний стан.</p>
+        <p class="feature-train">Важливо регулярно відвідувати лікаря.</p>
       </section>
 
       <section class="skills">
