--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 
       <section class="features">
         <h2>Збереження здоров'я</h2>
-        <p class="feature-kitten">Підтримка здоров'я - це шлях до довголіття і гарного самопочуття!</p>
-        <p class="feature-cat">Здоров'я потребує уваги кожен день: збалансоване харчування, активний спосіб життя і турбота про психічний стан.</p>
-        <p class="feature-train">Важливо регулярно відвідувати лікаря.</p>
+        <p class="feature-kitten">Збереження здоров'я — це комплексний підхід, що включає правильне харчування, фізичну активність і турботу про психічний стан. Кожен з цих аспектів допомагає покращити якість життя і забезпечити довголіття.</p>
+        <p class="feature-cat">Регулярні фізичні навантаження допомагають підтримувати тіло в тонусі і запобігають розвитку багатьох хронічних захворювань. Вони покращують серцево-судинну систему, зміцнюють м'язи та кістки, а також підвищують загальний рівень енергії.</p>
+        <p class="feature-train">Хороший сон — це важливий компонент здоров'я, який сприяє відновленню організму та підтримці емоційного балансу. Недосипання може призвести до зниження працездатності та послаблення імунітету, тому регулярний і повноцінний сон є необхідним.</p>
       </section>
 
       <section class="skills">
         <h2>Корисні поради</h2>
         <ul class="skills-list">
-          <li class="skills-item">Збалансоване харчування: Овочі, фрукти та здорові жири для вашого імунітету!</li>
-          <li class="skills-item">Фізична активність: Прогулянки на свіжому повітрі чи йога покращують ваше самопочуття.</li>
-          <li class="skills-item">Сон: Важливо спати 7-8 годин на добу для підтримки енергії та психічного здоров'я.</li>
+          <li class="skills-item">Регулярні фізичні навантаження допомагають підтримувати здоров'я на високому рівні.</li>
+          <li class="skills-item">Ретельний догляд за психічним здоров'ям сприяє покращенню якості життя.</li>
+          <li class="skills-item">Збалансований режим сну відіграє важливу роль у відновленні сил і покращенні працездатності.</li>
         </ul>
       </section>
 
