--- a/index.html
+++ b/index.html
@@ -27,11 +27,23 @@
         </ul>
       </section>
 
+      <section class="gallery">
+       <img crc="img/l.jpg" alt="Стрілка вліво" id="left-arrow">
+       <img crc="img/gallery/1.jpg" alt="Головне зображення" id="main-imade">
+       <img crc="img/r.jpg" alt="Стрілка вправо" id="right-arrow">
+      </section>
+
+
+
+
+
+
       <section>
         <h2>Отримати пораду</h2>
         <button id="btn_love_wishes">Отримати поради</button>
         <p id="love-wishes"></p>
       </section>
+      
 
       <section>
         <h2>Кількість пігулок</h2>
