--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <section class="features">
         <h2>Збереження здоров'я</h2>
         <p class="feature-kitten">Збереження здоров'я — це комплексний підхід, що включає правильне харчування, фізичну активність і турботу про психічний стан. Кожен з цих аспектів допомагає покращити якість життя і забезпечити довголіття.</p>
-        <p class="feature-cat">Регулярні фізичні навантаження допомагають підтримувати тіло в тонусі і запобігають розвитку багатьох хронічних захворювань. Вони покращують серцево-судинну систему, зміцнюють м'язи та кістки, а також підвищують загальний рівень енергії.</p>
-        <p class="feature-train">Хороший сон — це важливий компонент здоров'я, який сприяє відновленню організму та підтримці емоційного балансу. Недосипання може призвести до зниження працездатності та послаблення імунітету, тому регулярний і повноцінний сон є необхідним.</p>
+        <p class="feature-kitten">Регулярні фізичні навантаження допомагають підтримувати тіло в тонусі і запобігають розвитку багатьох хронічних захворювань. Вони покращують серцево-судинну систему, зміцнюють м'язи та кістки, а також підвищують загальний рівень енергії.</p>
+        <p class="feature-kitten">Хороший сон — це важливий компонент здоров'я, який сприяє відновленню організму та підтримці емоційного балансу. Недосипання може призвести до зниження працездатності та послаблення імунітету, тому регулярний і повноцінний сон є необхідним.</p>
       </section>
 
       <section class="skills">
@@ -36,7 +36,10 @@
 
       
       
-
+<section class="vitamins">
+   <h2>Вітаміни</h2>
+  <p id="p-vitamins"></p>
+</section>
 
 
 
