змінено дизайн кнопок галереї, додано нові схеми, додано фон секції: Збереження здоров'я

--- a/index.html
+++ b/index.html
@@ -15,21 +15,14 @@
         <h2>Збереження здоров'я</h2>
         <p class="feature-kitten">
           Збереження здоров'я — це комплексний підхід, що включає правильне
-          харчування, фізичну активність і турботу про психічний стан. Кожен з
-          цих аспектів допомагає покращити якість життя і забезпечити
-          довголіття.
+          харчування, фізичну активність і турботу про психічний стан.
         </p>
         <p class="feature-kitten">
-          Регулярні фізичні навантаження допомагають підтримувати тіло в тонусі
-          і запобігають розвитку багатьох хронічних захворювань. Вони покращують
-          серцево-судинну систему, зміцнюють м'язи та кістки, а також підвищують
-          загальний рівень енергії.
+          Регулярні фізичні навантаження допомагають підтримувати тіло в тонусі.
         </p>
         <p class="feature-kitten">
           Хороший сон — це важливий компонент здоров'я, який сприяє відновленню
-          організму та підтримці емоційного балансу. Недосипання може призвести
-          до зниження працездатності та послаблення імунітету, тому регулярний і
-          повноцінний сон є необхідним.
+          організму.
         </p>
       </section>
 
@@ -37,34 +30,21 @@
         <h2>Корисні поради</h2>
         <ul class="skills-list">
           <li class="skills-item">
-            Регулярні фізичні навантаження допомагають підтримувати здоров'я на
-            високому рівні.
+            Регулярні фізичні навантаження допомагають підтримувати здоров'я.
           </li>
           <li class="skills-item">
-            Ретельний догляд за психічним здоров'ям сприяє покращенню якості
-            життя.
+            Ретельний догляд за психічним здоров'ям покращує якість життя.
           </li>
           <li class="skills-item">
-            Збалансований режим сну відіграє важливу роль у відновленні сил і
-            покращенні працездатності.
+            Збалансований режим сну допомагає у відновленні сил.
           </li>
         </ul>
       </section>
 
       <section class="gallery">
-        <img
-          src="img/l.jpg"
-          alt="Стрілка вліво"
-          id="left-arrow"
-          class="arrow-button"
-        />
+        <img src="img/l.jpg" alt="Стрілка вліво" id="left-arrow" class="arrow-button" />
         <img src="img/gallery/1.jpg" alt="Головне зображення" id="main-image" />
-        <img
-          src="img/r.jpg"
-          alt="Стрілка вправо"
-          id="right-arrow"
-          class="arrow-button"
-        />
+        <img src="img/r.jpg" alt="Стрілка вправо" id="right-arrow" class="arrow-button" />
       </section>
 
       <section class="vitamins">
@@ -76,6 +56,7 @@
         <h2>Отримати пораду</h2>
         <button id="btn_love_wishes">Отримати поради</button>
         <p id="love-wishes"></p>
+        <p id="pill-warning" style="color: red;"></p>
       </section>
 
       <section>
@@ -92,3 +73,4 @@
     <script src="js/index.js"></script>
   </body>
 </html>
+
